--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="channel_new_post_description" translatable="false">Notifications new post</string>
     <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
     <string name="notification_user_new_post" translatable="false">User %1$s create new post</string>
+    <string name="empty_posts">no posts</string>
+    <string name="retry_loading">Retry</string>
+    <string name="error_loading">try again later</string>
 </resources>
